# llm

./: .gitignore  Cargo.toml
llm-impl/attention/: Cargo.toml  attention.ipynb
llm-impl/attention/src/: lib.rs
llm-impl/attention/src/core/: attn.rs  mod.rs
llm-impl/gpt/: Cargo.toml  gpt.ipynb
llm-impl/gpt/src/: lib.rs
llm-impl/gpt/src/core/: gpt.rs  mod.rs
llm-impl/pretraining/: Cargo.toml  pretraining.ipynb
llm-impl/pretraining/src/: lib.rs
llm-impl/working-with-text-data/: Cargo.toml
llm-impl/working-with-text-data/src/core/: dataset.rs  embedding.rs  mod.rs  tokenize.rs  utils.rs
llm-impl/working-with-text-data/tests/: tokenize_test.rs
ollama-chat/: Cargo.toml  Dockerfile  Makefile  config.yaml  docker-compose.yaml
ollama-chat/src/: config.rs  main.rs
ollama-chat/src/handlers/: chat.rs  health.rs  helloworld.rs  metrics.rs  mod.rs
ollama-chat/tests/: grpc_helloworld_test.rs
ollama-dev/: Cargo.toml
ollama-dev/src/: main.rs
src/: main.rs
