[package]
name = "ollama-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ollama-rs = { version = "0.2.1", features = ["stream"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16"}
