[package]
name = "working-with-text-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json", "stream"] }
futures-util = "0.3.31"
regex = "1.11.0"
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-datasets = { workspace = true }
